--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,12 @@
             "Tests\\": "tests/"
         }
     },
+    "vercel": [
+        "npm run build",
+        "mkdir -p /vercel/output/static",
+        "cp -r public/build /vercel/output/static/",
+        "php artisan migrate --force"
+    ],
     "scripts": {
         "setup": [
             "composer install",
@@ -80,6 +86,7 @@
             "pestphp/pest-plugin": true,
             "php-http/discovery": true
         }
+
     },
     "minimum-stability": "stable",
     "prefer-stable": true
